Fix layout misalignment bug

--- a/src/css/mine.css
+++ b/src/css/mine.css
@@ -4,7 +4,7 @@ body {
     /*background:rgba(192,192,192,0.2);*/
     font-family: Microsoft Yahei, Verdana, sans-serif, 宋体;
     font-size: 12px;
-    margin: 0px;
+    margin: 0;
     text-align: center;
 }
 
@@ -21,7 +21,7 @@ button {
 /*关闭图标*/
 .close {
     position: absolute;
-    right: 0px;
+    right: 0;
     top: -3px;
     width: 25px;
     height: 22px;
@@ -65,14 +65,12 @@ button {
     left: 5px;
 }
 
-
 #border {
     padding: 4px;
     display: inline-block;
     height: auto;
     width: auto;
 }
-
 
 /*录像控制*/
 #video_control {
@@ -81,7 +79,7 @@ button {
     width: 467px;
     height: 30px;
     margin-top: 355px;
-    margin-left: 0px;
+    margin-left: 0;
     margin-bottom: 20px;
     background: rgb(192, 192, 192);
     border-radius: 1px;
@@ -157,7 +155,7 @@ button {
     -webkit-appearance: none; /*清除系统默认样式*/
     width: 97% !important;
     background: -webkit-linear-gradient(left, dodgerblue, deepskyblue, dodgerblue) no-repeat, #ddd;
-    background-size: 0% 100%; /*设置左右宽度比例*/
+    background-size: 0 100%; /*设置左右宽度比例*/
     height: 3px; /*横条的高度*/
 }
 
@@ -201,13 +199,9 @@ button {
 #outborder {
     width: 146px;
     height: 210px;
-    margin: 0px auto;
+    margin: 0 auto;
     float: right;
-    border: 3px solid;
-    border-top-color: blue;
-    border-left-color: blue;
-    border-right-color: blue;
-    border-bottom-color: blue;
+    border: 3px solid blue;
 }
 
 #counters table {
@@ -222,25 +216,17 @@ button {
 }
 
 #container {
-    margin-top: 6px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
+    margin: 6px auto auto;
     /*边框*/
-    border: 3px solid;
-    border-top-color: rgb(160, 160, 160);
-    border-left-color: rgb(160, 160, 160);
+    border: 3px solid rgb(160, 160, 160);
     border-right-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
     /*背景线条*/
-    background: rgb(192, 192, 192);
-    background-image: linear-gradient(0deg, rgb(128, 128, 128) 1px, transparent 0),
+    background: rgb(192, 192, 192) linear-gradient(0deg, rgb(128, 128, 128) 1px, transparent 0),
     linear-gradient(90deg, rgb(128, 128, 128) 1px, transparent 0);
     background-size: 16px 16px;
     /*外轮廓*/
-    outline-style: solid;
-    outline-color: rgb(192, 192, 192);
-    outline-width: 6px;
+    outline: rgb(192, 192, 192) solid 6px;
     /*文本*/
     line-height: 14px;
     text-align: center;
@@ -252,8 +238,7 @@ button {
     width: 134px;
     height: 20px;
     background-color: rgb(224, 224, 224);
-    border: 6px solid;
-    border-color: rgb(192, 192, 192);
+    border: 6px solid rgb(192, 192, 192);
 }
 
 #mark span {
@@ -274,15 +259,13 @@ button {
     position: relative;
     width: 146px;
     height: 234px;
-    margin: 0px auto;
+    margin: 0 auto;
     /*手机端上下滑动的空间*/
     /*暂定为无，避免手机端扫雷时屏幕滑动影响操作*/
     /*margin-bottom: 20px;*/
     float: right;
     /*边框*/
-    border: 3px solid;
-    border-top-color: rgb(255, 255, 255);
-    border-left-color: rgb(255, 255, 255);
+    border: 3px solid rgb(255, 255, 255);
     border-right-color: rgb(160, 160, 160);
     border-bottom-color: rgb(160, 160, 160);
     border-radius: 1px;
@@ -295,14 +278,10 @@ button {
     background: rgb(192, 192, 192);
     margin-top: 6px;
     margin-left: 6px;
-    border: 2px solid;
-    border-top-color: rgb(160, 160, 160);
-    border-left-color: rgb(160, 160, 160);
+    border: 2px solid rgb(160, 160, 160);
     border-right-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
-    outline-style: solid;
-    outline-color: rgb(192, 192, 192);
-    outline-width: 6px;
+    outline: rgb(192, 192, 192) solid 6px;
 }
 
 #mine_count {
@@ -311,9 +290,7 @@ button {
     float: left;
     margin-top: 4px;
     margin-left: 4px;
-    border: 1px solid;
-    border-top-color: rgb(160, 160, 160);
-    border-left-color: rgb(160, 160, 160);
+    border: 1px solid rgb(160, 160, 160);
     border-right-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
 }
@@ -321,8 +298,7 @@ button {
 #face {
     width: 26px;
     height: 26px;
-    margin: auto;
-    margin-top: 3px;
+    margin: 3px auto auto;
 }
 
 #face img {
@@ -333,16 +309,14 @@ button {
 #counters {
     width: 120px;
     height: 343px;
-    margin: 0px auto;
+    margin: 0 auto;
     /*手机端上下滑动的空间*/
     /*暂定为无，避免手机端扫雷时屏幕滑动影响操作*/
     /*margin-bottom: 20px;*/
     float: left;
     background: rgb(192, 192, 192);
     /*边框*/
-    border: 3px solid;
-    border-top-color: rgb(255, 255, 255);
-    border-left-color: rgb(255, 255, 255);
+    border: 3px solid rgb(255, 255, 255);
     border-right-color: rgb(160, 160, 160);
     border-bottom-color: rgb(160, 160, 160);
     border-radius: 1px;
@@ -361,9 +335,7 @@ button {
     float: right;
     margin-top: -25px;
     margin-right: 6px;
-    border: 1px solid;
-    border-top-color: rgb(160, 160, 160);
-    border-left-color: rgb(160, 160, 160);
+    border: 1px solid rgb(160, 160, 160);
     border-right-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
 }
@@ -374,68 +346,11 @@ button {
     height: 100%;
 }
 
-.block {
-    width: 12px;
-    height: 12px;
-    border: 2px solid;
-    border-top-color: rgb(255, 255, 255);
-    border-left-color: rgb(255, 255, 255);
-    border-right-color: rgb(128, 128, 128);
-    border-bottom-color: rgb(128, 128, 128);
-    float: left;
-    margin: 0 0 0 0px;
-}
-
-.openedBlockBomb {
-    width: 12px;
-    height: 12px;
-    border: 2px solid;
-    border-top-color: rgb(255, 255, 255);
-    border-left-color: rgb(255, 255, 255);
-    border-right-color: rgb(128, 128, 128);
-    border-bottom-color: rgb(128, 128, 128);
-    float: left;
-    margin: 0 0 0 0px;
-}
-
-.question {
-    width: 12px;
-    height: 12px;
-    border: 2px solid;
-    border-top-color: rgb(255, 255, 255);
-    border-left-color: rgb(255, 255, 255);
-    border-right-color: rgb(128, 128, 128);
-    border-bottom-color: rgb(128, 128, 128);
-    float: left;
-    margin: 0 0 0 0px;
-}
-
-.opening {
+.block, .openedBlockBomb, .question, .opening, .bomb, .firstbomb, .number {
     width: 16px;
     height: 16px;
     float: left;
-    margin: 0px;
-}
-
-.bomb {
-    width: 16px;
-    height: 16px;
-    float: left;
-    margin: 0px;
-}
-
-.firstbomb {
-    width: 16px;
-    height: 16px;
-    float: left;
-    margin: 0px;
-}
-
-.number {
-    width: 16px;
-    height: 16px;
-    float: left;
-    margin: 0px;
+    margin: 0;
 }
 
 .number img, .firstbomb img, .bomb img, .openedBlockBomb img, .block img, .opening img, .question img {
@@ -446,7 +361,6 @@ button {
 .preload_image {
     display: none;
 }
-
 
 /* 下拉按钮样式 */
 .dropbtn {
@@ -486,7 +400,7 @@ button {
     height: 24px;
     text-align: left;
     float: left;
-    border: 0px;
+    border: 0;
     background-color: transparent;
 }
 
@@ -495,7 +409,7 @@ button {
     height: 24px;
     text-align: left;
     float: left;
-    border: 0px;
+    border: 0;
     background-color: transparent;
 }
 
